--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   sstv:
-    build: .
+    image: sindrigudmundsson/sstv-go:latest
     environment:
       USERNAME: "${USERNAME}"
       PASSWORD: "${PASSWORD}"
